--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@
 .import/
 export.cfg
 export_presets.cfg
-
+Builds/
 # Imported translations (automatically generated from CSV files)
 *.translation
 
