--- a/dialogic/settings.cfg
+++ b/dialogic/settings.cfg
@@ -4,4 +4,9 @@ updatenumber=1
 
 [theme]
 
-default="default-theme.cfg"
+default="theme-1639637801.cfg"
+
+[dialog]
+
+text_event_audio_enable=true
+remove_empty_messages=false
